--- a/views/index.jade
+++ b/views/index.jade
@@ -25,3 +25,112 @@ block contenido
                 a(class="right carousel-control kb_control_right" href="#kb" role="button" data-slide="next")
                     span(class="glyphicon glyphicon-menu-right" aria-hidden="true")
                     span(class="sr-only")|Next
+    #review.reviews.landing-wayra(style='background-color: rgb(154, 205, 145);')
+        br
+        br
+        .container
+            .w3_tittle.second.two
+                h3.agile-tittle.two.gal Wayra Control
+                .line-style.second
+                    span.second
+            .w3-agile-top-info
+                .col-md-7.w3_about_grid_left
+                    h6 Titulo Presentación Servicios 
+                    p
+                        | Presentación servicios
+                    #accordion.panel-group.about_panel(role='tablist', aria-multiselectable='true')
+                        .panel.panel-default
+                            #headingOne.panel-heading(role='tab')
+                                h4.panel-title.asd
+                                    a.pa_italic(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseOne', aria-expanded='true', aria-controls='collapseOne')
+                                        span.glyphicon.glyphicon-plus(aria-hidden='true')
+                                        i.glyphicon.glyphicon-minus(aria-hidden='true')
+                                        | Especialistas en Control Aviar
+                            #collapseOne.panel-collapse.collapse.in(role='tabpanel', aria-labelledby='headingOne')
+                                .panel-body.panel_text
+                                    | Resumen corto servicio.
+                                    br
+                                    a(href="#")|Ver más.
+                        .panel.panel-default
+                            #headingTwo.panel-heading(role='tab')
+                                h4.panel-title.asd
+                                    a.pa_italic.collapsed(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseTwo', aria-expanded='false', aria-controls='collapseTwo')
+                                        span.glyphicon.glyphicon-plus(aria-hidden='true')
+                                        i.glyphicon.glyphicon-minus(aria-hidden='true')
+                                        | Exhibiciónes Aviares
+                            #collapseTwo.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingTwo')
+                                .panel-body.panel_text
+                                    | Resumen corto servicio.
+                                    br
+                                    a(href="#")|Ver más.
+                        .panel.panel-default
+                            #headingThree.panel-heading(role='tab')
+                                h4.panel-title.asd
+                                    a.pa_italic.collapsed(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseThree', aria-expanded='false', aria-controls='collapseThree')
+                                        span.glyphicon.glyphicon-plus(aria-hidden='true')
+                                        i.glyphicon.glyphicon-minus(aria-hidden='true')
+                                        | Espectaculos en Eventos
+                            #collapseThree.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingThree')
+                                .panel-body.panel_text
+                                    | Resumen corto servicio. 
+                                    br
+                                    a(href="#")|Ver más.
+                .col-md-5.w3ls-welcome-img1.w3ls-welcome-img2
+                    iframe(src='https://www.youtube.com/embed/Jzakfq2L1Fw', frameborder='1')
+
+    #about.work
+        .agileits_works-top
+            .col-md-6.agileits_works-grid
+                img.img-responsive(src='images/ab.jpg', alt=' ')
+            .col-md-6.agileits_works-grid.two
+                .wthree-text
+                    h4 ¿Quienes Somos?
+                    .w3_tittle
+                        .line-style
+                            span
+                    p
+                        | Wayra control EIRL es una empresa innovadora en el rubro del control de plagas, pues basados en técnicas de trampeo antiguas, agudos conocimientos en comportamiento animal y elementos de captura de vanguardia, hemos desarrollado técnicas específicas para la reducción progresiva y sistemática de grandes poblaciones de aves plaga; En función de cada situación en particular nuestros técnicos especializados en dichos sistemas desarrollan estructuras y elementos de trampeo a medida, a fin de sobrepasar largamente las expectativas de nuestros clientes.
+                        br
+                        |Estamos convencidos además, que solo a través del manejo integrado de diversos métodos, se obtienen resultados tangibles y permanentes a corto y mediano plazo.
+            .clearfix
+            .col-md-6.gallery-grid
+                .grid
+                    figure.effect-roxy
+                        a.example-image-link
+                            img(src='images/g1.jpg', alt='')
+                            figcaption
+                                h3
+                                    span Misión
+                                h3|Contribuir con nuestro enfoque particular, de captura, caza sanitaria y reubicación progresiva, a la despoblación continua de aves nocivas, en áreas y zonas aledañas que afecten a poblaciones humanas vulnerables y de escasos recursos, donde generalmente los principales perjudicados suelen ser niños y ancianos, por la exposición continua y la falta de medidas sanitarias.
+            .col-md-6.gallery-grid
+                .grid
+                    figure.effect-roxy
+                        a.example-image-link
+                            img(src='images/g2.jpg', alt='')
+                            figcaption
+                                h3
+                                    span Visión
+                                h3|Cambiar sistemáticamente el método trasnochado y nada efectivo que se emplea actualmente en el mercado. Visión que plantea la disuasión y espanta de aves, como la única alternativa en el manejo del control de las plagas aviares. Cuando lo ideal es atacar frontalmente el problema, capturando, reduciendo y reubicando a los individuos en cuestión, pues solo así se estarán logrando resultados, que en el paso del tiempo puedan ser realmente efectivos, sostenibles y altamente benéficos para todos.
+        .agileits_work_grids
+            ul#flexiselDemo1
+                li
+                    .agileits_work_grid.view.view-sixth
+                        img.img-responsive(src='images/g1.jpg', alt=' ')
+                        .mask
+                            a.info(href='#') Dazzling Birds
+                li
+                    .agileits_work_grid.view.view-sixth
+                        img.img-responsive(src='images/g3.jpg', alt=' ')
+                        .mask
+                            a.info(href='#') Dazzling Birds
+                li
+                    .agileits_work_grid.view.view-sixth
+                        img.img-responsive(src='images/g4.jpg', alt=' ')
+                        .mask
+                            a.info(href='#') Dazzling Birds
+                li
+                    .agileits_work_grid.view.view-sixth
+                        img.img-responsive(src='images/g2.jpg', alt=' ')
+                        .mask
+                            a.info(href='#') Dazzling Birds
+        .clearfix
