--- a/views/index.jade
+++ b/views/index.jade
@@ -81,7 +81,7 @@ block contenido
     #about.work
         .agileits_works-top
             .col-md-6.agileits_works-grid
-                img.img-responsive(src='images/ab.jpg', alt=' ')
+                img.img-responsive(src='images/landing_nosotros.jpg', alt=' ')
             .col-md-6.agileits_works-grid.two
                 .wthree-text
                     h4 ¿Quienes Somos?
@@ -97,7 +97,7 @@ block contenido
                 .grid
                     figure.effect-roxy
                         a.example-image-link
-                            img(src='images/g1.jpg', alt='')
+                            img(src='images/landing_mision.jpg', alt='')
                             figcaption
                                 h3
                                     span Misión
