--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block contenido
                     div(class="item active")
                         img(src="images/banner.jpg" alt="" class="img-responsive")
                         div(class="carousel-caption kb_caption kb_caption_right")
-                            h3(data-animation="animated flipInX")|Especialistas en Control Aviar Alex
+                            h3(data-animation="animated flipInX")|Especialistas en Control Aviar
                             h4(data-animation="animated flipInX")|Control de aves del sector agrícola
                     div(class="item")
                         img(src="images/banner1.jpg" alt="" class="img-responsive")
